--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,11 @@ h1, h2, p, a {
   text-decoration: none;
 }
 
+.work-link a:hover {
+  color: #bebebe;
+  font-size: 1.1em;
+}
+
 /* Set media queries for responsiveness */
 
 @media screen and (min-width: 481px) and (max-width: 870px) {
